Add Disqus support, remove test post

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,5 +7,7 @@
 
     {% include footer.html %}
   </div>
+  <!-- Enable comment count -->
+  <script id="dsq-count-scr" src="//l2choi.disqus.com/count.js" async></script>
 </body>
 </html>
