--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,6 +38,7 @@ layout: default
 
   <!-- Disqus -->
   {% if page.comments != false and site.disqus.id %}
+  <a href="https://l2choi.github.io{{ page.url }}#disqus_thread">0 Comments</a>
   <section id="disqus_thread"></section>
   {% include disqus.html %}
   {% endif %}
