--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,5 +31,5 @@
 		{% endif %}
 
 	</div>
-	© 2016 {{ site.author.name }}. All rights reserved.
+	© 2016 {{ site.author.name }}. All rights reserved. Powered by Jekyll.
 </div>
