Modified footer & thoughts on work reports post, add new images

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,5 +31,6 @@
 		{% endif %}
 
 	</div>
-	© 2016 {{ site.author.name }}. All rights reserved. Powered by Jekyll.
+	© 2016-17 {{ site.author.name }}. All rights reserved. 
+	This site is powered by Jekyll.
 </div>
